--- a/app/blog/templates/utils/backend_base.html
+++ b/app/blog/templates/utils/backend_base.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="{{url_for('static', filename = 'favicon.ico')}}" />
+
+    <link rel="bookmark" href="{{url_for('static', filename = 'favicon.ico')}}/>
     <link href="{{url_for('static', filename = 'bootstrap/css/bootstrap.css')}}" rel="stylesheet">
     <link href="{{url_for('static', filename = 'css/layer.css')}}" rel="stylesheet">
     <style>
