--- a/django_blog/backend/templates/article/article_edit.html
+++ b/django_blog/backend/templates/article/article_edit.html
@@ -133,7 +133,7 @@
             }
 
         }).then(function (data) {
-
+            window.location.href = data.data.url
         })
     })
     </script>
