--- a/django_blog/backend/templates/article/index.html
+++ b/django_blog/backend/templates/article/index.html
@@ -124,7 +124,7 @@
             }
 
         }).then(function (data) {
-
+            window.location.href = data.data.url
         })
     })
     </script>
