--- a/django_blog/backend/templates/admin/index.html
+++ b/django_blog/backend/templates/admin/index.html
@@ -19,7 +19,7 @@
 {% block body %}
     <div class="row">
         <ul >
-            <li class="col-xs-3 text-center"><a href="{% url 'article_index' %}"> add article</a></li>
+            <li class="col-xs-3 text-center"><a href="{% url 'article_index' %}"> 11add article</a></li>
             <li class="col-xs-3 text-center"><a href=""> edit user </a></li>
             <li class="col-xs-3 text-center"><a href="javascript:void (0)"> do some thing </a></li>
         </ul>
