--- a/django_blog/backend/templates/admin/index.html
+++ b/django_blog/backend/templates/admin/index.html
@@ -20,7 +20,7 @@
     <div class="row">
         <ul >
             <li class="col-xs-3 text-center"><a href="{% url 'article_index' %}"> 11add article</a></li>
-            <li class="col-xs-3 text-center"><a href=""> edit user </a></li>
+            <li class="col-xs-3 text-center"><a class="layer-pop" href="{% url 'edit_user' %}"> edit user </a></li>
             <li class="col-xs-3 text-center"><a href="javascript:void (0)"> do some thing </a></li>
         </ul>
     </div>
@@ -47,6 +47,17 @@
 
 {% block script %}
     <script>
-
+        $('.layer-pop').click(function (event) {
+            event.preventDefault();
+            let url = $(this).attr('href')
+            layer.open({
+                type: 2,
+                shadeClose: true,
+                area: ['700px', '450px'],
+                // fixed: false, //不固定
+                // maxmin: true,
+                content: url
+            });
+        })
     </script>
 {% endblock %}
