--- a/django_blog/backend/templates/admin/index.html
+++ b/django_blog/backend/templates/admin/index.html
@@ -19,8 +19,9 @@
 {% block body %}
     <div class="row">
         <ul >
-            <li class="col-xs-3 text-center"><a href="{% url 'article_index' %}"> 11add article</a></li>
+            <li class="col-xs-3 text-center"><a href="{% url 'article_index' %}"> add article</a></li>
             <li class="col-xs-3 text-center"><a class="layer-pop" href="{% url 'edit_user' %}"> edit user </a></li>
+            <li class="col-xs-3 text-center"><a href="{% url 'add_images' %}"> add images </a></li>
             <li class="col-xs-3 text-center"><a href="javascript:void (0)"> do some thing </a></li>
         </ul>
     </div>
