--- a/django_blog/backend/templates/article/article_edit.html
+++ b/django_blog/backend/templates/article/article_edit.html
@@ -32,6 +32,7 @@
             <li class="col-xs-3 text-center"><a href="{% url 'index' %}"> go back </a></li>
             <li class="col-xs-3 text-center"><a href="{% url 'article_index' %}"> add article</a></li>
             <li class="col-xs-3 text-center"><a class="layer-pop" href="{% url 'edit_user' %}"> edit user </a></li>
+            <li class="col-xs-3 text-center"><a href="{% url 'add_images' %}"> add images </a></li>
             <li class="col-xs-3 text-center"><a href="javascript:void (0)"> do some thing </a></li>
         </ul>
     </div>
