--- a/django_blog/backend/templates/base.html
+++ b/django_blog/backend/templates/base.html
@@ -4,6 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 <link rel="shortcut icon"  href="{% url_for 'favicon.ico' %}" type="image/x-icon"/>
     <link rel="stylesheet" href="{% url_for 'css/base.css' %}">
     <link rel="stylesheet" href="{% url_for 'layer/theme/default/layer.css' %}">
